--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </header>
   <main class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-6 d-flex justify-content-center align-items-center"><img src="https://symfony.com/images/the-fast-track-book/covers/6.2/fr.png" alt=""></div>
+      <div class="col-6">
         <h1 class="w-100 text-center py-3  text-primary m-0">Contexte</h1>
         <p>
           La sécurité est une question importante lorsque l'on détient une application web . Il est probavle que nous acceptions et que nous permettions que notre page d'accueil soit accessible à tout "surfeur" sans aucune restriction. <br>
