--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   </header>
   <main class="container">
     <div class="row">
-      <div class="col-6 d-flex justify-content-center align-items-center"><img src="https://symfony.com/images/the-fast-track-book/covers/6.2/fr.png" alt=""></div>
+      <div class="col-6 d-flex-column justify-content-center align-items-center">
+        <h1 class="w-100 text-center py-3  text-primary m-0">Symfony-security</h1>
+        <img src="https://symfony.com/images/the-fast-track-book/covers/6.2/fr.png" alt="">
+      </div>
       <div class="col-6">
         <h1 class="w-100 text-center py-3  text-primary m-0">Contexte</h1>
         <p>
