--- a/Authentification.html
+++ b/Authentification.html
@@ -130,7 +130,19 @@
           </form>
           {% endblock %}
         </pre>
+        <br><br>
+        <h2>make:registration-form</h2>
         <p>
+         Nous venons d'installer et de décrire l'authentification mais nous ne pouvons pas nous identifier car nous avons une base de données vide. Il va falloir maintenant pouvoir s'inscrire.
+          <br><br>
+          dans le terminzl de commande , tapez ces lignes de commandes ("validator" est nécessaire pour le formulaire qui sera créé):br  
+
+          <ul>
+            <li>composer require validator</li>
+            <li>composer require form</li>
+            <li>Symfony console make:registration-form</li>
+          </ul>
+        <span>Veuillez valider les proposition dans le terminal</span>
           
         </p>
       </div>
